--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 html, body {
     height: 100%;
     /* inline-size: 100%;
@@ -5,18 +9,100 @@ html, body {
 }
 
 body {
-    margin: 0;
-}
-
-.computer {
     position: absolute;
     inset: 0;
     margin: auto;
+    box-sizing: border-box;
+    padding: 1rem;
+
+    width: fit-content;
+}
+
+.computer {
+    position: relative;
+
+    border: solid black;
+    border-radius: 0.5rem;
+    overflow: clip;
 
     max-width: 100%;
     max-height: 100%;
 
     aspect-ratio: 16 / 9;
 
-    background-color: black;
+    background-image: url('imgs/backgrounds/gg-teacher-block.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.views {
+    flex: 1;
+
+    overflow: auto;
+
+    .view {
+        margin: 0;
+        padding: 0;
+        border: 0;
+
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.dock {
+    width: 100%;
+    background-image: url('imgs/dock.png');
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: contain;
+
+    user-select: none;
+}
+
+.items {
+    position: absolute;
+    bottom: 2.75rem;
+    left: 0.5rem;
+
+    box-sizing: border-box;
+    padding: 1rem;
+
+    background-color: white;
+    border-radius: 1rem;
+
+    display: grid;
+
+    text-align: center;
+
+    a {
+        width: 100%;
+    }
+}
+
+.action-btn {
+}
+
+#launchpad {
+    opacity: 0;
+
+    position: absolute;
+    bottom: 1.1px;
+    left: 1.1px;
+
+    width: 27.5px;
+    aspect-ratio: 1;
+
+    border: none;
+    border-radius: 100%;
+    background-color: white;
+
+    &:not(:checked) + .items {
+        display: none;
+    }
 }
