--- a/style.css
+++ b/style.css
@@ -57,10 +57,16 @@ body {
 
 .dock {
     width: 100%;
-    background-image: url('imgs/dock.png');
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: contain;
+
+    .dock-img {
+        display: block;
+        max-width: 100%;
+
+        background-image: url('imgs/dock.png');
+        background-repeat: no-repeat;
+        background-position: center bottom;
+        background-size: contain;
+    }
 
     user-select: none;
 }
@@ -80,6 +86,11 @@ body {
 
     text-align: center;
 
+    &:has(~ .dock) {
+        background-color: blue;
+        /* display: none; */
+    }
+
     a {
         width: 100%;
     }
@@ -89,7 +100,7 @@ body {
 }
 
 #launchpad {
-    opacity: 0;
+    /* opacity: 0; */
 
     position: absolute;
     bottom: 1.1px;
@@ -100,9 +111,5 @@ body {
 
     border: none;
     border-radius: 100%;
-    background-color: white;
-
-    &:not(:checked) + .items {
-        display: none;
-    }
+    background-color: transparent;
 }
